--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-minimal
+title: "Портфолио"
+description: "Мои проекты и навыки"
+theme: jekyll-theme-cayman
+github_username: antonborisov571
